<?xml version="1.0"?>
<package>
  <name>cloudora</name>
  <version>1.0.0</version>
  <description>Object Tracking for the Parrot AR.Drone</description>

  <maintainer email="abishek.akella@gmail.com">Abishek Akella</maintainer>


  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>

</package>
